--- a/firebase-demo/package.json
+++ b/firebase-demo/package.json
@@ -23,7 +23,9 @@
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
     "firebase": "^5.4.1",
-    "rxjs": "^6.0.0",
+    "promise-polyfill": "^8.1.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
